welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:13: error: not found: value k
while (k != freq(i))
       ^golomb:14: error: missing arguments for method golomb in class golomb;
follow this method with `_' if you want to treat it as a partially applied function
golomb(i)=a
^golomb:16: error: type mismatch;
 found   : Unit
 required: Int
a += 1
  ^