welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {
var freq = new Array[Int](num)
var a = 0
var i = 0
if (num==1) return 1
a=2 
i=2



freq(i)=golomb(i)

while (k != freq(i))
golomb(i)=a

a += 1
	
	


}
